--- a/PASystem/.classpath
+++ b/PASystem/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/Vidun Nethdina/Documents/mysql-connector-j-8.3.0.jar">
+	<classpathentry kind="lib" path="D:/UNIVERSITY/year 3 sem 1/OOP/mysql-connector-j-8.3.0/mysql-connector-j-8.3.0.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
